--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -1,6 +1,6 @@
 .testimonial-container {
     background-color: #d1d3d4;
-    padding: 60px 0;
+    padding: 40px 0;
     width: 100%;
   }
   
